--- a/daraz.html
+++ b/daraz.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="daraz.css" />
   </head>
-  <body>
+  <>
     <header>
       <div class="head1">
         <div class="head1-img cursor"></div>
@@ -88,7 +88,30 @@
             <img src="shop_5.png">
           <span>Proudly Nepali</span>
         </div>
-      </div>
-    </div>
+        </div>
+        <div class="categories">
+          <div class="cat-head">
+<p>Categories</p>
+          </div>
+          <div class="cat-box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        </div>
   </body>
 </html>
